tests/smt2/error/minimized4.smt2
(declare-const c Bool)
(check-sat)
(check-sat-assuming)
